added login and register paths/pages (draft 1)

--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,10 @@
     "dev": "react-scripts start"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
