--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
