--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001/",
+  "proxy": "http://127.0.0.1:5001",
   "devDependencies": {
     "eslint-plugin-react": "^7.29.4"
   }
