--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
-    "mapbox-gl": "^2.8.2",
+    "mapbox-gl": "1.13.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
