specified nodejs version in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project-3",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.0.0"
+  },
   "private": true,
   "type": "module",
   "dependencies": {
