--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "0.1.0",
   "engines": {
-    "node": "18.0.0"
+    "node": "19.2.0"
   },
   "private": true,
   "type": "module",
@@ -13,7 +13,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
@@ -27,12 +27,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "nodemon index.js",
-    "seed": "node db/seeds.js"
+    "start": "node index.js",
+    "seed": "node db/seeds.js",
+    "client": "yarn start --prefix client",
+    "dev": "concurrently \"nodemon index.js\" \"node client\"",
+
+    "render-postbuild": "cd client && yarn --only=dev && yarn && yarn build"
+
   },
   "eslintConfig": {
     "extends": [
