--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "yarn start --prefix client",
+    "clientinstall": "yarn add --prefix client",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "seed": "node db/seeds.js"
   },
   "eslintConfig": {
