--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.9.1",
-    "mongoose-unique-validator": "2.0.3",
+    "mongoose-unique-validator": "^2.0.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -27,11 +27,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "client": "yarn start --prefix client",
-    "clientinstall": "yarn add --prefix client",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "seed": "node db/seeds.js"
   },
   "eslintConfig": {
